// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with email instead of hash 1`] = `
<div
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseMove={[Function]}
  title="Administrator"
>
  <Connect(Avatar)
    email="admin@admin.ch"
    name="Administrator"
    size={16}
  />
  <strong
    className="spacer-left"
  >
    Administrator
  </strong>
  <span
    className="note little-spacer-left"
  >
    admin
  </span>
</div>
`;

exports[`should render correctly without all parameters 1`] = `
<div
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseMove={[Function]}
  title="Administrator"
>
  <Connect(Avatar)
    hash="7daf6c79d4802916d83f6266e24850af"
    name="Administrator"
    size={16}
  />
  <strong
    className="spacer-left"
  >
    Administrator
  </strong>
  <span
    className="note little-spacer-left"
  >
    admin
  </span>
</div>
`;
